--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -59,24 +59,20 @@
           AI/ML Engineer | B.Tech CS VIT Bhopal | CodingJr AI Research Intern |
           Building impactful Generative AI & Computer Vision solutions
         </p>
-        <a href="#projects" class="cta-button">View My Work</a>
-        <a
-          href="docs/Ankit Sharma Resume.pdf"
-          class="cta-button cta-secondary"
-          target="_blank"
-          rel="noopener noreferrer"
-          >View Resume</a
-        >
-        <a
-          href="#"
-          class="cta-button cta-secondary"
-          data-modal="ai-chat-modal"
-          role="button"
-          aria-haspopup="dialog"
-          aria-controls="ai-chat-modal"
-        >
-          Ask my AI
-        </a>
+        <div class="hero-actions">
+          <div
+            class="hero-ai-bar"
+            data-modal="ai-chat-modal"
+            role="button"
+            tabindex="0"
+          >
+            <i class="fas fa-robot spark-icon"></i>
+            <span class="ai-typing-text"
+              >Ask me about Ankit's ML projects or skills...</span
+            >
+            <div class="ai-go-btn"><i class="fas fa-arrow-right"></i></div>
+          </div>
+        </div>
       </div>
     </section>
 
