--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ankit Sharma - AI/ML Portfolio</title>
+
+    <title>Ankit Sharma | AI & ML Engineer Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio of Ankit Sharma, an AI/ML Engineer specializing in LLMs, Computer Vision, and Cloud Computing. Student at VIT Bhopal."
+    />
+    <meta name="author" content="Ankit Sharma" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ankit-sharma-sigma.vercel.app/" />
+    <meta property="og:title" content="Ankit Sharma | AI/ML Engineer" />
+    <meta
+      property="og:description"
+      content="Explore my Machine Learning projects, AI chatbot, and technical skills. Let's build something impactful."
+    />
+    <meta
+      property="og:image"
+      content="https://ankit-sharma-sigma.vercel.app/assets/portfolio-preview.webp"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://ankit-sharma-sigma.vercel.app/" />
+    <meta name="twitter:title" content="Ankit Sharma | AI/ML Engineer" />
+    <meta
+      name="twitter:description"
+      content="Explore my Machine Learning projects, AI chatbot, and technical skills."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ankit-sharma-sigma.vercel.app/assets/portfolio-preview.webp"
+    />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
@@ -12,7 +43,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
