--- a/frontend/index.html
+++ b/frontend/index.html
@@ -414,11 +414,11 @@
         >
           <div class="project-image">
             <img
-              src="assets\brain.webp"
+              src="assets\brain1.webp"
               alt="Brain Tumor Detection thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
@@ -447,7 +447,7 @@
               alt="Heal-Bridge AI thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
@@ -476,7 +476,7 @@
               alt="Groq LLM Chatbot thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
@@ -505,7 +505,7 @@
               alt="Gait Biometrics thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
@@ -533,7 +533,7 @@
               alt="Student Performance Prediction thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
@@ -562,7 +562,7 @@
               alt="Food Delivery Time Prediction thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
@@ -591,7 +591,7 @@
               alt="Customer Churn Prediction thumbnail"
               loading="lazy"
               decoding="async"
-              width="600"
+              width="230"
               height="190"
             />
           </div>
