--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,38 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Ankit Sharma | AI & ML Engineer Portfolio</title>
-    <meta
-      name="description"
-      content="Portfolio of Ankit Sharma, an AI/ML Engineer specializing in LLMs, Computer Vision, and Cloud Computing. Student at VIT Bhopal."
-    />
-    <meta name="author" content="Ankit Sharma" />
-
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ankit-sharma-sigma.vercel.app/" />
-    <meta property="og:title" content="Ankit Sharma | AI/ML Engineer" />
-    <meta
-      property="og:description"
-      content="Explore my Machine Learning projects, AI chatbot, and technical skills. Let's build something impactful."
-    />
-    <meta
-      property="og:image"
-      content="https://ankit-sharma-sigma.vercel.app/assets/portfolio-preview.webp"
-    />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://ankit-sharma-sigma.vercel.app/" />
-    <meta name="twitter:title" content="Ankit Sharma | AI/ML Engineer" />
-    <meta
-      name="twitter:description"
-      content="Explore my Machine Learning projects, AI chatbot, and technical skills."
-    />
-    <meta
-      name="twitter:image"
-      content="https://ankit-sharma-sigma.vercel.app/assets/portfolio-preview.webp"
-    />
-
+    <title>Ankit Sharma - AI/ML Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
@@ -43,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -414,11 +384,11 @@
         >
           <div class="project-image">
             <img
-              src="assets\brain1.webp"
+              src="assets\brain.webp"
               alt="Brain Tumor Detection thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
@@ -447,7 +417,7 @@
               alt="Heal-Bridge AI thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
@@ -476,7 +446,7 @@
               alt="Groq LLM Chatbot thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
@@ -505,7 +475,7 @@
               alt="Gait Biometrics thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
@@ -533,7 +503,7 @@
               alt="Student Performance Prediction thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
@@ -562,7 +532,7 @@
               alt="Food Delivery Time Prediction thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
@@ -591,7 +561,7 @@
               alt="Customer Churn Prediction thumbnail"
               loading="lazy"
               decoding="async"
-              width="230"
+              width="600"
               height="190"
             />
           </div>
