--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,8 +56,8 @@
       <div class="hero-content">
         <h1>Hi, I'm <span>Ankit Sharma</span></h1>
         <p>
-          AI/ML Engineer | B.Tech CS VIT Bhopal | CodingJr AI Research Intern |
-          Building impactful Generative AI & Computer Vision solutions
+          Aspiring AI/ML Engineer | Ex-CodingJr AI Research Intern | B.Tech CS
+          VIT Bhopal | Generative AI & CV
         </p>
         <div class="hero-actions">
           <div
@@ -87,7 +87,7 @@
         />
         <div class="about-text">
           <p>
-            21-year-old B.Tech Computer Science student from VIT Bhopal
+            22-year-old B.Tech Computer Science student from VIT Bhopal
             University (CGPA 8.75). Passionate about AI/ML with hands-on
             experience from
             <strong>CodingJr AI Research Internship</strong> where I conducted
@@ -109,34 +109,54 @@
       <h2>Skills & Technologies</h2>
       <div class="skills-grid">
         <div class="skill-card">
-          <i class="fas fa-brain skill-icon"></i>
+          <i class="fa-solid fa-wand-magic-sparkles skill-icon"></i>
           <h3>Generative AI / LLMs</h3>
-          <p>Llama-2, RAG, Fine-tuning, PEFT/LoRA, Prompt Engineering</p>
+          <p>
+            LLMs, RAG, Fine-tuning, PEFT/LoRA, Prompt Engineering, LangChain,
+            Vector Embeddings, Transformer, HuggingFace
+          </p>
         </div>
         <div class="skill-card">
           <i class="fas fa-cloud skill-icon"></i>
           <h3>Cloud Computing</h3>
-          <p>Oracle OCI Certified, AWS IAM/Lambda, MLOps</p>
+          <p>Oracle OCI Certified, AWS IAM/Lambda, MLOps, CI/CD Basics</p>
         </div>
         <div class="skill-card">
           <i class="fas fa-robot skill-icon"></i>
           <h3>Machine Learning</h3>
-          <p>CNNs, RNNs, XGBoost, Scikit-learn, TensorFlow/PyTorch</p>
+          <p>
+            TensorFlow/PyTorch, Feature Engineering, EDA, ANNs, CNNs, RNNs,
+            XGBoost, Scikit-learn, Transfer Learning
+          </p>
         </div>
         <div class="skill-card">
-          <i class="fas fa-code skill-icon"></i>
-          <h3>Full Stack</h3>
-          <p>Python, C++, Java, Flask, HTML/CSS/JS, MySQL</p>
+          <i class="fa-solid fa-server skill-icon"></i>
+          <h3>Backend & ML Apps</h3>
+          <p>Python, C++, Java, Flask, HTML/CSS/JS, MySQL, Streamlit, Git</p>
         </div>
         <div class="skill-card">
           <i class="fab fa-linux skill-icon"></i>
-          <h3>DevOps</h3>
-          <p>Linux, Git/GitHub, Docker basics, VS Code</p>
+          <h3>MLOps & Cloud</h3>
+          <p>
+            Linux, Git/GitHub, Docker basics, VS Code, AWS, Model Deployment,
+            PaaS Hosting, CI/CD Deployment
+          </p>
         </div>
         <div class="skill-card">
           <i class="fas fa-database skill-icon"></i>
-          <h3>Databases</h3>
-          <p>MySQL, Pandas, Data Engineering</p>
+          <h3>Data Engineering & Storage</h3>
+          <p>
+            MySQL, Pandas, NumPy, Featuretools, Preprocessing Pipelines, Data
+            Normalization, Data Cleaning
+          </p>
+        </div>
+        <div class="skill-card">
+          <i class="fas fa-puzzle-piece skill-icon"></i>
+          <h3>Core CS & Problem Solving</h3>
+          <p>
+            Data Structure and Algorithms(DSA), OOPs, Operating Systems,
+            Computer Networks, DBMS
+          </p>
         </div>
       </div>
     </section>
@@ -160,7 +180,6 @@
             <li>Generative AI research & transformer models</li>
             <li>Production chatbot development (NLP)</li>
             <li>Model fine-tuning & evaluation pipelines</li>
-            <li>Remote collaboration with India-wide teams</li>
           </ul>
         </div>
         <div
@@ -173,8 +192,25 @@
         >
           <h3>B.Tech Computer Science</h3>
           <h4>VIT Bhopal University</h4>
-          <p class="date">2023 - Present (3rd Year) | CGPA: 8.75</p>
-          <p>Top performer specializing in AI/ML & Cloud Computing</p>
+          <ul
+            style="
+              margin-top: 10px;
+              padding-left: 20px;
+              font-size: 0.9rem;
+              color: var(--text);
+            "
+          >
+            <li style="margin-bottom: 6px">
+              2023 - Present (3rd Year) | CGPA: 8.75.
+            </li>
+            <li style="margin-bottom: 6px">
+              Actively building and deploying practical Machine Learning and Gen
+              AI projects.
+            </li>
+            <li>
+              Active Cultural Club member and team player outside the classroom.
+            </li>
+          </ul>
         </div>
         <div
           class="experience-card education"
@@ -186,8 +222,9 @@
         >
           <h3>Class 12 (CBSE)</h3>
           <h4>JNV Kothipura, Bilaspur (HP)</h4>
-          <p class="date">2022 | Score: 84.4</p>
-          <p>Science stream with Computer Science; House Captain.</p>
+          <p class="date">2022 | Score: 84.4%</p>
+          <p>Non-Medical stream with Computer Science.</p>
+          <p>House Captain.</p>
         </div>
 
         <div
@@ -200,8 +237,9 @@
         >
           <h3>Class 10 (CBSE)</h3>
           <h4>JNV Kothipura, Bilaspur (HP)</h4>
-          <p class="date">2020 | Score: 92.8</p>
+          <p class="date">2020 | Score: 92.8%</p>
           <p>Strong foundation in Mathematics and Science.</p>
+          <p>Cluster-level athlete in Kho Kho and active sports participant.</p>
         </div>
       </div>
 
