--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,8 +112,8 @@
           <i class="fa-solid fa-wand-magic-sparkles skill-icon"></i>
           <h3>Generative AI / LLMs</h3>
           <p>
-            LLMs, RAG, Fine-tuning, PEFT/LoRA, Prompt Engineering, LangChain,
-            Vector Embeddings, Transformer, HuggingFace
+            LLMs, RAG, Fine-tuning, Prompt Engineering, PEFT/LoRA, LangChain,
+            Transformer, HuggingFace
           </p>
         </div>
         <div class="skill-card">
@@ -146,8 +146,8 @@
           <i class="fas fa-database skill-icon"></i>
           <h3>Data Engineering & Storage</h3>
           <p>
-            MySQL, Pandas, NumPy, Featuretools, Preprocessing Pipelines, Data
-            Normalization, Data Cleaning
+            MySQL, Pandas, NumPy, Preprocessing Pipelines, Data Normalization,
+            Data Cleaning
           </p>
         </div>
         <div class="skill-card">
@@ -192,18 +192,9 @@
         >
           <h3>B.Tech Computer Science</h3>
           <h4>VIT Bhopal University</h4>
-          <ul
-            style="
-              margin-top: 10px;
-              padding-left: 20px;
-              font-size: 0.9rem;
-              color: var(--text);
-            "
-          >
-            <li style="margin-bottom: 6px">
-              2023 - Present (3rd Year) | CGPA: 8.75.
-            </li>
-            <li style="margin-bottom: 6px">
+          <ul>
+            <li>2023 - Present (3rd Year) | CGPA: 8.75.</li>
+            <li>
               Actively building and deploying practical Machine Learning and Gen
               AI projects.
             </li>
@@ -223,8 +214,10 @@
           <h3>Class 12 (CBSE)</h3>
           <h4>JNV Kothipura, Bilaspur (HP)</h4>
           <p class="date">2022 | Score: 84.4%</p>
-          <p>Non-Medical stream with Computer Science.</p>
-          <p>House Captain.</p>
+          <ul>
+            <li>Non-Medical stream with Computer Science.</li>
+            <li>House Captain.</li>
+          </ul>
         </div>
 
         <div
@@ -238,8 +231,12 @@
           <h3>Class 10 (CBSE)</h3>
           <h4>JNV Kothipura, Bilaspur (HP)</h4>
           <p class="date">2020 | Score: 92.8%</p>
-          <p>Strong foundation in Mathematics and Science.</p>
-          <p>Cluster-level athlete in Kho Kho and active sports participant.</p>
+          <ul>
+            <li>Strong foundation in Mathematics and Science.</li>
+            <li>
+              Cluster-level athlete in Kho Kho and active sports participant.
+            </li>
+          </ul>
         </div>
       </div>
 
@@ -297,23 +294,31 @@
             2023 – Present | 3rd Year | CGPA: 8.75/10
           </p>
 
-          <div class="modal-actions">
-            <a
-              class="modal-link"
-              href="docs\StudentGradeHistory_23BCE11180.pdf"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              View Marksheet
-            </a>
-          </div>
-
           <div class="modal-section">
             <h4>Focus</h4>
-            <p>
-              Specializing in AI, Machine Learning, and Cloud Computing;
-              consistently among top performers.
-            </p>
+            <ul>
+              <li>
+                <strong>Academic Excellence:</strong> Consistently among top
+                performers with an 8.75/10 CGPA and a strong foundation in core
+                CS algorithms.
+              </li>
+              <li>
+                <strong>Applied AI & Cloud:</strong> Specializing in AI/ML by
+                building and deploying end-to-end applications (GenAI, Computer
+                Vision) using modern cloud infrastructure.
+              </li>
+              <li>
+                <strong>Team Engineering:</strong> Collaborating on long-term,
+                complex technical initiatives, including a cross-view Gait-Based
+                Biometric System.
+              </li>
+              <li>
+                <strong>Campus Leadership:</strong> Active Cultural Club member
+                and competitive sports participant (Kho Kho, Cricket),
+                demonstrating strong teamwork and cross-functional
+                communication.
+              </li>
+            </ul>
           </div>
         </div>
       </dialog>
@@ -329,25 +334,26 @@
           </button>
           <h3 id="edu-class12-title">Class 12 (CBSE) — JNV Kothipura</h3>
           <p class="modal-subtitle">
-            2022 | Score: 84.4 | Science (with Computer Science)
+            2022 | Score: 84.4 | Non-Medical (with Computer Science)
           </p>
-
-          <div class="modal-actions">
-            <a
-              class="modal-link"
-              href="docs\class 12 certificate.pdf"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              View Marksheet
-            </a>
-          </div>
 
           <div class="modal-section">
             <h4>Highlights</h4>
-            <ul class="modal-bullets">
-              <li>Science stream with Computer Science.</li>
-              <li>School House Captain (leadership role).</li>
+            <ul>
+              <li>
+                <strong>Academics:</strong> Science stream with Computer Science
+                (Secured 84.4% in CBSE boards).
+              </li>
+              <li>
+                <strong>Leadership:</strong> School House Captain, responsible
+                for leading and coordinating large-scale student activities and
+                events.
+              </li>
+              <li>
+                <strong>Extracurriculars:</strong> Competitive athlete;
+                participated in cluster-level and regional Kho Kho tournaments,
+                demonstrating strong teamwork.
+              </li>
             </ul>
           </div>
         </div>
@@ -365,22 +371,15 @@
           <h3 id="edu-class10-title">Class 10 (CBSE) — JNV Kothipura</h3>
           <p class="modal-subtitle">2020 | Score: 92.8</p>
 
-          <div class="modal-actions">
-            <a
-              class="modal-link"
-              href="docs\class10 .pdf"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              View Marksheet
-            </a>
-          </div>
 
           <div class="modal-section">
             <h4>Highlights</h4>
-            <ul class="modal-bullets">
-              <li>Excellent foundation in Mathematics and Science.</li>
-            </ul>
+            <ul>
+  <li ><strong>Academics:</strong> Secured 92.8% in CBSE board examinations.</li>
+  <li ><strong>Core Strengths:</strong> Built an excellent, rigorous foundation in Mathematics and Science.</li>
+  <li><strong>Competitiveness:</strong> Consistently ranked among the top academic performers in the cohort.</li>
+  <li><strong>Athletics:</strong> Active participant in competitive school sports (Kho Kho, Cricket), developing early discipline and team collaboration.</li>
+</ul>
           </div>
         </div>
       </dialog>
