--- a/frontend/index.html
+++ b/frontend/index.html
@@ -434,7 +434,7 @@
             <h3 class="project-title">Brain Tumor Detection</h3>
             <p>96% accuracy CNN for MRI scans</p>
             <div class="project-tags">
-              <span>TensorFlow</span><span>CNNs</span><span>
+              <span>TensorFlow</span><span>CNNs</span>
             </div>
           </div>
         </article>
@@ -549,7 +549,7 @@
             <h3 class="project-title">Student Performance Prediction</h3>
             <p>Complete ML pipeline + Flask app (92.5% accuracy)</p>
             <div class="project-tags">
-              <span>Scikit-learn</span><span>Machine Learning</span>
+              <span>Scikit-learn</span><span>Regression</span>
             </div>
           </div>
         </article>
